# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import versionsRouter from "./versions";
+import clientVersionRouter from "./client-version";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(versionsRouter);
+router.use(clientVersionRouter);
 
 export default router;
